<resources>
    <string name="app_name">Report</string>
    <string name="edit_score">Edit</string>
    <string name="delete_score">Delete</string>
    <string name="serial_no">1</string>
    <string name="test_name">Test 248 </string>
    <string name="test_date">2021 Jan 12</string>
    <string name="test_series_title">Test Series:</string>
    <string name="test_series">NTA Abhyas</string>
    <string name="physics">Physics</string>
    <string name="chemistry">Chemistry</string>
    <string name="maths">Maths</string>
    <string name="total">Total</string>
    <string name="score">90/100</string>
    <string name="full_score">270/300</string>
    <string name="email">Email</string>
    <string name="button_continue">Continue</string>
    <string name="add_text_score">Add Text Score</string>
    <string name="add_nta_abhyas">Add NTA Abhyas or other test scores</string>
    <string name="test_series_">Test Series</string>
    <string name="test_name_">Test Name</string>
    <string name="enter_test_name">Enter Test Name</string>
    <string name="test_taken_on">Taken On</string>
    <string name="date_format">MM/DD/YYYY</string>
    <string name="subject">Subject</string>
    <string name="your_score">Your Score</string>
    <string name="full_score_">Full Score</string>
    <string name="save">Save</string>
</resources>