<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.add_score.AddScoreActivity">

    <TextView
        android:id="@+id/add_text_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:text="@string/add_text_score"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/add_nta_abhyas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/add_nta_abhyas"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/text_grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_text_score"/>

    <TextView
        android:id="@+id/test_series"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:text="@string/test_series"
        android:textStyle="bold"
        android:textSize="14sp"
        android:textColor="@color/text_grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_nta_abhyas"/>

    <LinearLayout
        android:id="@+id/test_series_spinner_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/test_series">

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/test_series_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <TextView
        android:id="@+id/test_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/test_name_"
        android:textStyle="bold"
        android:textSize="14sp"
        android:textColor="@color/text_grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/test_series_spinner_layout"/>

    <EditText
        android:id="@+id/et_test_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:hint="@string/enter_test_name"
        android:textColorHint="@color/text_grey"
        android:textSize="16sp"
        android:textColor="#646464"
        android:background="@drawable/edit_text_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/test_name"/>

    <TextView
        android:id="@+id/taken_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/test_taken_on"
        android:textStyle="bold"
        android:textSize="14sp"
        android:textColor="@color/text_grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_test_name"/>

    <EditText
        android:id="@+id/et_taken_on"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:inputType="date"
        android:hint="@string/date_format"
        android:textColorHint="@color/text_grey"
        android:textSize="16sp"
        android:textColor="#646464"
        android:drawableRight="@drawable/ic_calendar"
        android:background="@drawable/edit_text_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taken_on"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_taken_on">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="2"
                android:text="@string/subject"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/text_grey"/>


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="@string/your_score"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/text_grey"/>


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="@string/full_score_"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/text_grey"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/physics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/theme_blue"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.6"
                android:text="@string/physics"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/black"/>


            <EditText
                android:id="@+id/et_physics_score"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:hint="00"
                android:inputType="number"
                android:textColorHint="@color/text_grey"
                android:textSize="18sp"
                android:textColor="#646464"
                android:background="@drawable/edit_text_background"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:text="/"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/black"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:hint="100"
                android:inputType="none"
                android:focusable="false"
                android:gravity="center"
                android:textColorHint="@color/text_grey"
                android:textSize="16sp"
                android:textColor="#646464"
                android:background="@drawable/edit_text_background"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chemistry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/theme_blue"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.6"
                android:text="@string/chemistry"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/black"/>


            <EditText
                android:id="@+id/et_chemistry_score"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:hint="00"
                android:inputType="number"
                android:textColorHint="@color/text_grey"
                android:textSize="18sp"
                android:textColor="#646464"
                android:background="@drawable/edit_text_background"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:text="/"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/black"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:hint="100"
                android:inputType="none"
                android:focusable="false"
                android:gravity="center"
                android:textColorHint="@color/text_grey"
                android:textSize="16sp"
                android:textColor="#646464"
                android:background="@drawable/edit_text_background"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/physics_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/maths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/theme_blue"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.6"
                android:text="@string/maths"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/black"/>


            <EditText
                android:id="@+id/et_maths_score"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:hint="00"
                android:inputType="number"
                android:textColorHint="@color/text_grey"
                android:textSize="18sp"
                android:textColor="#646464"
                android:background="@drawable/edit_text_background"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:text="/"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/black"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:hint="100"
                android:inputType="none"
                android:focusable="false"
                android:gravity="center"
                android:textColorHint="@color/text_grey"
                android:textSize="16sp"
                android:textColor="#646464"
                android:background="@drawable/edit_text_background"/>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/saveScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp"
        android:paddingVertical="10dp"
        android:gravity="center"
        android:background="@drawable/save_button_background"
        android:text="@string/save"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>